--- a/a_html/d_media/a_hyperlink.html
+++ b/a_html/d_media/a_hyperlink.html
@@ -33,9 +33,9 @@
   : 태그의 내용에 이미지를 삽입(img 태그, image)
   -->
   <a href="https://www.naver.com">
-    <img src="./animal-6889548_640.jpg" alt="네이버 바로가기">
+    <img src="./animal-6889548_640.jpg" alt="네이버 바로가기" />
   </a>
-  <img src="./animal-6889548_640.jpg" alt="네이버 바로가기">
+  <img src="./animal-6889548_640.jpg" alt="네이버 바로가기" />
 
   <!-- 
   하이퍼링크의 추가 속성
