--- a/c_html_css/index.html
+++ b/c_html_css/index.html
@@ -21,41 +21,31 @@
 
   <header>
     <h1>🌟 홍길동의 포트폴리오 🌟</h1>
+    <p>웹 개발자 & 디자이너</p>
   </header>
 
   <nav>
-    <p>웹 개발자 & 디자이너</p>
     <ul>
-      <li>
-        <a href="#1">교육</a>
-      </li>
-      <li>
-        <a href="#2">경력</a>
-      </li>
-      <li>
-        <a href="#3">취미</a>
-      </li>
-      <li>
-        <a href="#4">연락처</a>
-      </li>
-      <li>
-        <a href="#5">기술 스킬</a>
-      </li>
+      <li><a href="#education">교육</a></li>
+      <li><a href="#career">경력</a></li>
+      <li><a href="#hobbies">취미</a></li>
+      <li><a href="#contact">연락처</a></li>
+      <li><a href="#skills">기술 스킬</a></li>
     </ul>
   </nav>
   
   <main>
-    <section>
-      <h2 id="1">🎓 교육</h2>
-      <p><b>서울대학교 컴퓨터공학과 졸업</b></p>
+    <section id="education">
+      <h2>🎓 교육</h2>
+      <p><strong>서울대학교 컴퓨터공학과 졸업</strong></p>
       <p>컴퓨터 과학의 기본 원리에 대한 깊은 이해를 바탕으로 다양한 프로젝트와 연구에 참여하였습니다...</p>
     </section>
 
-    <section>
-      <h2 id="2">💼 경력</h2>
+    <section id="career">
+      <h2>💼 경력</h2>
       <p>XYZ 회사에서 소프트웨어 엔지니어로 근무</p>
 
-      <table>
+      <table border="1">
         <thead>
           <tr>
             <th>연도</th>
@@ -81,35 +71,35 @@
       <p>주니어 개발자로 시작하여, 다양한 프로젝트를 성공적으로 이끌며 시니어 개발자로 승진하였습니다...</p>
     </section>
 
-    <section>
-      <h2 id="3">🎨 취미</h2>
+    <section id="hobbies">
+      <h2>🎨 취미</h2>
       <p>사진 촬영, 여행, 음악 감상</p>
       <p>여행을 통해 새로운 문화를 경험하고, 이를 사진으로 기록하는 것을 좋아합니다...</p>
     </section>
 
-    <section>
-      <h2 id="4">📞 연락처</h2>
+    <section id="contact">
+      <h2>📞 연락처</h2>
       <p>이메일: <a href="mailto:gildong@example.com">gildong@example.com</a> 📧</p>
       <p>전화번호: 010-1234-5678 📱</p>
       <p>프로젝트 문의나 채용 제안은 언제든지 환영합니다...</p>
     </section>
 
-    <section>
-      <h2 id="5">🛠 기술 스킬</h2>
+    <section id="skills">
+      <h2>🛠 기술 스킬</h2>
 
-      <ol>
-        <li type="A">HTML & CSS</li>
-        <li type="A">JavaScript</li>
-        <li type="A">React</li>
-        <li type="A">Node.js</li>
+      <ol type="A">
+        <li>HTML & CSS</li>
+        <li>JavaScript</li>
+        <li>React</li>
+        <li>Node.js</li>
       </ol>
       <p>최신 웹 기술에 대한 지속적인 학습과 적용에 힘쓰고 있으며, 다양한 프레임워크와 라이브러리에 익숙합니다...</p>
     </section>
 
-    <section>
+    <section id="schedule">
       <h2>📅 일정 표</h2>
 
-      <table>
+      <table border="1">
         <thead>
           <tr>
             <th>시간</th>
@@ -150,10 +140,9 @@
   </main>
 
   <footer>
-    <p>ⓒ 2025 홍길동. 모든 권리 보유.</p>
+    <p>&copy; 2025 홍길동. 모든 권리 보유.</p>
     <p>
-      저를 찾아보세요: 
-      <a href="">GitHub</a> | <a href="">LinkedIn</a>
+      저를 찾아보세요: <a href="">GitHub</a> | <a href="">LinkedIn</a>
     </p>
   </footer>
 
