--- a/c_html_css/index.html
+++ b/c_html_css/index.html
@@ -4,12 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>index</title>
-  <style>
-    table, tr, th, td {
-      border: 1px solid black;
-      border-collapse: collapse;
-    }
-  </style>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <!-- 
