20250319 javascript module update

--- a/d_javascript/j_모듈/practice02/index.html
+++ b/d_javascript/j_모듈/practice02/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="app">
     <h1>할 일 목록</h1>
-    <form id="new-todo-from">
+    <form id="new-todo-form">
       <!-- 
         ? bool 속성
         : 속성명 명시할 경우 >> 속성="true"와 동일
@@ -22,15 +22,16 @@
         <button type="submit">추가</button>
     </form>
     <ul id="todo-list">
-      <li class="completed">
+      <!-- <li class="completed">
         첫 번째 할일 <button class="delete-button">X</button>
       </li>
       <li>
         두 번째 할일 <button class="delete-button">X</button>
-      </li>
+      </li> -->
     </ul>
   </div>
 
-  <script src="./app.js"></script>
+  <!-- HTML에 연결되는 JS 파일에 모듈 시스템을 적용: type="module" -->
+  <script type="module" src="./app.js"></script>
 </body>
 </html>
