--- a/e_html_css_js/d_card_game/index.html
+++ b/e_html_css_js/d_card_game/index.html
@@ -13,7 +13,7 @@
     <div id="game-container">
       <div id="card-container">
         
-        <div class="card">
+        <!-- <div class="card">
           <div class="card-inner">
 
             <div class="card-front">
@@ -22,7 +22,8 @@
             <div class="card-back" style="background-color: pink;"></div>
             
           </div>
-        </div>
+        </div> -->
+
       </div>
     </div>
     <div id="button-container">
